feat(lottery): merge pending work into main and bump core baseline to 2.0.19
- add RestAreaStateBridge: probe core public MatchRestStateApi only, fail-closed with ERROR log when core is too old (fixes B-01 silent fail-open)
- add RolePoolVisibility mixin to use the core role visibility API
- 55 files of accumulated fixes across player assets, card backpack, mail, lottery and config screens
- bump dependency baseline from habitrain_core 2.0.12 to 2.0.19 in build.gradle and fabric.mod.json, rebuilt and tested against 2.0.19
- sync README dependency version and artifact name habitrain_lottery-1.1.12.jar